@@ -1,3 +1,8 @@
+2006-05-18  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil.Signatures/SignatureWriter.cs:
+		Fix bug in string writing.
+
 2006-05-12  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/AssemblyInfo.cs:
